# Csa-lab4-alg-risc

./: .gitignore  README.md  integration_test.py  isa.py  machine.py  pyproject.toml  translator.py
.github/workflows/: ci.yml
golden/: cat.yml  hello.yml  hello_user_name.yml
programs/: prob4.alg
src/: machine.py  translator.py
