[tool.poetry]
name = "csa-lab4"
version = "0.1.0"
description = ""
authors = ["Djeno <djeno00@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^8.3.5"
mypy = "^1.15.0"
pytest-golden = "^0.2.2"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
addopts = "--doctest-modules"
log_format = "%(levelname)-7s %(module)s:%(funcName)-13s %(message)s"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "N", "I", "C90", "UP", "ERA", "YTT", "ASYNC", "A",
    "COM", "FA", "ICN", "INP", "T20", "PT", "Q", "RET", "PTH", "PD",
    "TRY", "RUF"
]
ignore = [
    "COM812", "E501", "T201", "RUF002", "RUF003", "PTH123", "PTH118",
    "UP032", "E902", "RET504", "FA100", "C901", "N802", "FA102",
    "ERA001", "N806"
]
unfixable = ["ERA001"]

[tool.ruff.lint.mccabe]
max-complexity = 7
